# esp32-s3-game

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  idf_component.yml
main/dev-null/: bluetooth_test.cpp  bt-classic-bluedroid.cpp  bt-le-nimble.cpp  data.hpp  gpio-main.cpp  ledc-speaker-test.cpp  pwm-audio-lib-test.cpp  pwm-sterio-backend.cpp  rects-benchmark.cpp  simd.cpp  sound.hpp  spi-main.cpp  static-string.hpp  strhash.hpp  translators-usb.cpp  usb.cpp  wav-format.hpp
main/include/gzn/: utils.hpp
main/include/gzn/audio/: context.hpp  manager.hpp  wav-format.hpp
main/include/gzn/audio/backend/: pwm.hpp
main/include/gzn/core/: color.hpp  enum_array.hpp  math.hpp  math.inl
main/include/gzn/filesystem/: context.hpp  manager.hpp
main/include/gzn/graphics/: defaults.hpp  render.hpp
main/include/gzn/input/: actions.hpp  backend.hpp  context.hpp  manager.hpp
main/include/gzn/input/backend/: translators.hpp  usb.hpp
main/include/gzn/tft/: commands.hpp  config.hpp  constants.hpp  display.hpp  initialization.hpp  pins.hpp
main/include/gzn/tft/backend/ili9486/: commands.hpp  constants.hpp  initialization.hpp
main/sources/: main.cpp
main/sources/gzn/: utils.cpp
main/sources/gzn/audio/: manager.cpp
main/sources/gzn/audio/backend/: pwm.cpp  pwm.cpp.old
main/sources/gzn/filesystem/: manager.cpp
main/sources/gzn/graphics/: render.cpp
main/sources/gzn/input/: context.cpp  manager.cpp
main/sources/gzn/input/backend/: translators.cpp  usb-dualsense-translator.cpp  usb-keyboard-translator.cpp  usb.cpp
main/sources/gzn/tft/: display.cpp
thoughts/: bluetooth.md  gpio-benchmarks.csv  tft-ili9486.md
